objects/Purchase_Request__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alt1_Cost_Product_Impact__c</fullName>
        <inlineHelpText>REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>Alt1 Cost / Product Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alt2_Cost_Product_Impact__c</fullName>
        <label>Alt2 Cost / Product Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alt3_Cost_Product_Impact__c</fullName>
        <label>Alt3 Cost / Product Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_1__c</fullName>
        <label>Alternative 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_2__c</fullName>
        <label>Alternative 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_3__c</fullName>
        <label>Alternative 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Comment_Check__c</fullName>
        <description>related to CR-2083. Ultimately used to require comments when an approval is rejected.</description>
        <label>Approval Comment Check</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <label>Approval Stage</label>
        <picklist>
            <picklistValues>
                <fullName>InfoSec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Budget (1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Budget (2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal_Date__c</fullName>
        <label>Auto-Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of CR-20140314-4800.</description>
        <label>Budget</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Requests (Budget)</relationshipLabel>
        <relationshipName>Purchase_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is accountable for managing this vendor or chiefly responsible for using/administering the software?  Who will lead usage and coordination?
REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>Contract Owner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Active Employee Contacts associated with an Employee User Record may be selected.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Requests (Contract Owner)</relationshipLabel>
        <relationshipName>Purchase_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of CR-20140314-4800.</description>
        <label>Business Terms</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Requests (Business Terms)</relationshipLabel>
        <relationshipName>Purchase_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CapEx__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do any of the Budget Allocations associated with this Purchase Request contain CapEx?</inlineHelpText>
        <label>CapEx?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consequences_of_not_signing_purchasing__c</fullName>
        <inlineHelpText>What happens if we don’t make this purchase?  What happens if we delay this purchase?  What happens if we select a different vendor or version?
REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>Consequences of not signing/purchasing?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Considerations_Dependencies__c</fullName>
        <label>Considerations/Dependencies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Parent_Contract__r.End__c</formula>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Level__c</fullName>
        <label>Contract Level</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <inlineHelpText>REQUIRED BEFORE SUBMITTING REQUEST (if hard deadline exists).</inlineHelpText>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_Reason__c</fullName>
        <inlineHelpText>REQUIRED BEFORE SUBMITTING REQUEST (if hard deadline exists).</inlineHelpText>
        <label>Deadline Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deadline_Type__c</fullName>
        <inlineHelpText>Does this product or service need to be purchased by a specific date?
REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>Deadline Type</label>
        <picklist>
            <picklistValues>
                <fullName>No Hard Deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Deadline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Department head associated with the related Budget Allocation.  Automatically populated via trigger.</description>
        <label>Department Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departments_affected__c</fullName>
        <inlineHelpText>Which department(s) benefits from this purchase?
REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>Departments affected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when an attachment is added to the Purchase Request.  It must be true to begin the approval process.</description>
        <label>Has Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InfoSec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of CR-20140314-4800</description>
        <label>InfoSec</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Requests (InfoSec)</relationshipLabel>
        <relationshipName>Purchase_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of CR-20140314-4800.</description>
        <label>Legal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Requests (Legal)</relationshipLabel>
        <relationshipName>Purchase_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_Services__c</fullName>
        <inlineHelpText>Describe the products or services you are looking to purchase.</inlineHelpText>
        <label>Products/Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <label>Purchase Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Approval_Num__c</fullName>
        <inlineHelpText>Generated once Request is Approved</inlineHelpText>
        <label>Purchase Approval #</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Purchase_Request_Currency__c</fullName>
        <inlineHelpText>Enter the foreign currency amount requested.  Only convert to USD when payment is requested in USD by the vendor.</inlineHelpText>
        <label>Purchase Request: Currency</label>
        <picklist>
            <picklistValues>
                <fullName>GBP – Great British Pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD – US Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD – Australian Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD – Singapore Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP – Chilean Pesos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR – Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD – Canadian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL – Brazilian Real</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Awaiting Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the name of the person requesting this purchase; this will also be the person responsible for uploading the final/fully executed copy of any new contract.
REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>Submitted By</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Active Employee Contacts associated with an Employee User Record may be selected.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <defaultValue>TODAY ()</defaultValue>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <inlineHelpText>REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <inlineHelpText>REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Allocation_Amount__c</fullName>
        <description>This is used to figure out if the Purchase Request amount equals the total amount of budget allocation.  This is required prior to submitting for approval.</description>
        <label>Total Budget Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Purchase__c</fullName>
        <inlineHelpText>REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>Type of Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>Purchased Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Hardware/Servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Licenses (SAAS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetings/Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultants/Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Purchases and Subscriptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Status__c</fullName>
        <formula>TEXT(Vendor__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Vendor Institution records may be selected.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Why_do_we_need_it__c</fullName>
        <inlineHelpText>Provide information on why this product or service is required and how it will benefit Advisory Board.
REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>Why do we need it?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_selected__c</fullName>
        <inlineHelpText>Why was this vendor/version/functionality selected over others?</inlineHelpText>
        <label>Why selected?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1_Termination_for_Convenience__c</fullName>
        <inlineHelpText>The Advisory Board Company can terminate at any time without penalty.
If &apos;No&apos; is selected, please provide a Waiver Reason. 
REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>1. Termination for Convenience</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1_Waiver_Reason__c</fullName>
        <label>1. Waiver Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Fixed_Price_Increases__c</fullName>
        <inlineHelpText>Any price increases are fixed and definite. 
If &apos;No&apos; is selected, please provide a Waiver Reason. 
REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>2. Fixed Price Increases</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2_Waiver_Reason__c</fullName>
        <label>2. Waiver Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_Contract_Auto_Renews__c</fullName>
        <inlineHelpText>If &apos;No&apos; is selected, please provide a Waiver Reason. 
REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>3. No Auto-Renews</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3_Waiver_Reason__c</fullName>
        <label>3. Waiver Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4_Minimum_Commitments__c</fullName>
        <inlineHelpText>If &apos;No&apos; is selected, please provide a Waiver Reason. 
REQUIRED BEFORE SUBMITTING REQUEST.</inlineHelpText>
        <label>4. No Minimum Commitments</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>otal_Budget_Allocation_Equals_Purch_Amt__c</fullName>
        <formula>IF( Total_Budget_Allocation_Amount__c ==  Purchase_Amount__c , TRUE, FALSE)</formula>
        <label>Total Budget Allocation Equals Purch Amt</label>
        <type>Checkbox</type>
    </fields>
    <label>Purchase Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Purchase Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Requests</pluralLabel>
    <recordTypes>
        <fullName>Purchase_Request</fullName>
        <active>true</active>
        <label>Purchase Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submitted_Purchase_Request</fullName>
        <active>true</active>
        <label>Submitted Purchase Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AutoRenewal_Date_Required</fullName>
        <active>true</active>
        <description>Require value if Auto_Renew__c is TRUE</description>
        <errorConditionFormula>Auto_Renew__c = TRUE &amp;&amp; ISBLANK ( Auto_Renewal_Date__c )</errorConditionFormula>
        <errorDisplayField>Auto_Renewal_Date__c</errorDisplayField>
        <errorMessage>Auto Renew is checked so a date is required for Auto Renewal Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_must_be_within_3_years</fullName>
        <active>true</active>
        <description>The contract must be within a 3 year window.</description>
        <errorConditionFormula>(Term_End_Date__c - Term_Start_Date__c)  &gt;  1095</errorConditionFormula>
        <errorMessage>The Contract must be within a 3 year window to be included in a Purchase Request. Please modify your Term Start Date or Term End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deadline_Date_and_Deadline_Reason_Req</fullName>
        <active>true</active>
        <description>Both fields are required if Deadline Type = &quot;Hard Deadline&quot;</description>
        <errorConditionFormula>ISPICKVAL(  Deadline_Type__c , &quot;Hard Deadline&quot;) &amp;&amp;
OR( ISBLANK ( Deadline_Date__c ), ISBLANK ( Deadline_Reason__c ))</errorConditionFormula>
        <errorMessage>If Deadline Type = Hard Deadline, then both Deadline Date and Deadline Reason are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_must_be_approved_Purchase_Req</fullName>
        <active>true</active>
        <description>The Vendor must be approved before a Purchase Request can be created</description>
        <errorConditionFormula>(ISNEW () || ISCHANGED(Vendor__c)) &amp;&amp; (TEXT(Vendor__r.Status__c) = &quot;New - Pending Approval&quot; || TEXT(Vendor__r.Status__c) = &quot;Prohibited&quot;)</errorConditionFormula>
        <errorMessage>The Vendor associated with this Purchase Request has not been approved. Please ensure it is approved before trying to create a Purchase Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Waiver_Reasons_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
ISPICKVAL(X1_Termination_for_Convenience__c, &quot;No&quot;) &amp;&amp; ISBLANK( X1_Waiver_Reason__c), 
ISPICKVAL(X2_Fixed_Price_Increases__c, &quot;No&quot;) &amp;&amp; ISBLANK(  X2_Waiver_Reason__c), 
ISPICKVAL(X3_Contract_Auto_Renews__c, &quot;No&quot;) &amp;&amp; ISBLANK(  X3_Waiver_Reason__c ), 
ISPICKVAL(X4_Minimum_Commitments__c, &quot;No&quot;) &amp;&amp; ISBLANK(  X4_Waiver_Reason__c ) 
)</errorConditionFormula>
        <errorMessage>If 1. Termination for Convenience, 2. Fixed Price Increases, 3. Contract Auto-Renews or 4. Minimum Commitments equal No, then the corresponding numerical matching Waiver Reason must be completed.</errorMessage>
    </validationRules>
</CustomObject>